--- a/installació-de-wifi-per-al-pati-de-butaques.html
+++ b/installació-de-wifi-per-al-pati-de-butaques.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-15" />
+<meta name="date" content="2022-04-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -145,13 +145,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.1" data-path="streaming.html"><a href="streaming.html#materials"><i class="fa fa-check"></i><b>1.1</b> Materials<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-dinstillació"><i class="fa fa-check"></i><b>1.2</b> Projecte d’instil·lació<span></span></a></li>
 <li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#pressupost"><i class="fa fa-check"></i><b>1.3</b> Pressupost<span></span></a></li>
-<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a>
-<ul>
-<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.4.1</b> OBS<span></span></a></li>
-<li class="chapter" data-level="1.4.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.4.2</b> Livestream Studio<span></span></a></li>
-<li class="chapter" data-level="1.4.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.4.3</b> Wirecast<span></span></a></li>
-<li class="chapter" data-level="1.4.4" data-path="streaming.html"><a href="streaming.html#momolive"><i class="fa fa-check"></i><b>1.4.4</b> Momolive<span></span></a></li>
-</ul></li>
+<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a></li>
 <li class="chapter" data-level="1.5" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.5</b> Hardware necessari<span></span></a>
 <ul>
 <li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
@@ -216,7 +210,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
-<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> notes<span></span></a></li>
+<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
+<ul>
+<li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -238,11 +235,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Projecte 2</span> Instal·lació de wifi per al pati de butaques<a href="installació-de-wifi-per-al-pati-de-butaques.html#installació-de-wifi-per-al-pati-de-butaques" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="requeriments-per-a-la-seva-implantació" class="section level2 hasAnchor" number="2.1">
 <h2><span class="header-section-number">2.1</span> Requeriments per a la seva implantació<a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seva-implantació" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Uns repetidors de wifi, he quedat en un amic que controla del tema per a mirar-ho. Es tindria que pensar si realment es vol instal.lar per tindre coverture per als 92 espectadors, o es pensa que no tots es van a connectar, i començar per un sistema basic, ampliable conforme a les necessitat augmenten.</p>
+<p>Uns repetidors de wifi, he quedat en un amic que controla del tema per a mirar-ho. Es tindria que pensar si realment es vol instal.lar per tindre coverture per als 92 espectadors, o es pensa que no tots es van a connectar, i començar per un sistema bàsic, ampliable conforme a les necessitat augmenten.</p>
 <div id="potencia-de-la-connexió-de-internet-per-donar-servei" class="section level3 hasAnchor" number="2.1.1">
 <h3><span class="header-section-number">2.1.1</span> Potencia de la connexió de internet per donar servei<a href="installació-de-wifi-per-al-pati-de-butaques.html#potencia-de-la-connexió-de-internet-per-donar-servei" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>Es requereix que el ample de banda de la connexió d’internet puga donar servei al meins a 92 espectadors, que es el aforo del pati de butaques.</p>
-<p>Es te que limitar el ample de banda que oferim als espectadors en cas de realizer el streaming al mateix temps, aço ho realitzem assegurant el ample de banda en la xarxa de el circuit de imatge. en el switch.</p>
+<p>Es te que limitar l’ample de banda que oferim als espectadors en cas de realizar el streaming al mateix temps, aço ho realitzem assegurant l´ample de banda en la xarxa del circuit d’imatge. en el switch.</p>
 </div>
 <div id="localització-dels-dispositius-de-retransmissió" class="section level3 hasAnchor" number="2.1.2">
 <h3><span class="header-section-number">2.1.2</span> localització dels dispositius de retransmissió<a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -276,7 +273,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
-"github": false,
+"github": true,
 "facebook": true,
 "twitter": true,
 "linkedin": false,
@@ -292,8 +289,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/incitato/prova/edit/main/02-wifi.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
@@ -309,7 +306,7 @@ gitbook.start({
 "options": null
 },
 "toc": {
-"collapse": "subsection"
+"collapse": "none"
 },
 "toolbar": {
 "position": "static"
