--- a/streaming.html
+++ b/streaming.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-15" />
+<meta name="date" content="2022-04-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -145,13 +145,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.1" data-path="streaming.html"><a href="streaming.html#materials"><i class="fa fa-check"></i><b>1.1</b> Materials<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-dinstillació"><i class="fa fa-check"></i><b>1.2</b> Projecte d’instil·lació<span></span></a></li>
 <li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#pressupost"><i class="fa fa-check"></i><b>1.3</b> Pressupost<span></span></a></li>
-<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a>
-<ul>
-<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.4.1</b> OBS<span></span></a></li>
-<li class="chapter" data-level="1.4.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.4.2</b> Livestream Studio<span></span></a></li>
-<li class="chapter" data-level="1.4.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.4.3</b> Wirecast<span></span></a></li>
-<li class="chapter" data-level="1.4.4" data-path="streaming.html"><a href="streaming.html#momolive"><i class="fa fa-check"></i><b>1.4.4</b> Momolive<span></span></a></li>
-</ul></li>
+<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a></li>
 <li class="chapter" data-level="1.5" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.5</b> Hardware necessari<span></span></a>
 <ul>
 <li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
@@ -216,7 +210,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
-<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> notes<span></span></a></li>
+<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
+<ul>
+<li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -245,7 +242,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li><p><strong>Servidor</strong>, que deuria ser un ordenador de sobretaula, que es miraran els requisits minims segons el serveis que finalment es donen a terme.</p></li>
 <li><p><strong>Un servidor de disc</strong>, que podria ser el servidor dels altres apartats per guardar una copia de les diferents càmeres. si hi ha pressupost, es faria un <a href="https://ca.wikipedia.org/wiki/RAID">RAID</a>.</p></li>
 <li><p><strong>Càmeres ip</strong> i millors <strong>micròfons</strong> que envien el so per la connexió de xarxa de la càmera.</p></li>
-<li><p><strong><a href="https://www.vadavo.com/blog/switch-poe-que-es-y-que-tipos-hay/">Switch</a> <a href="https://ca.wikipedia.org/wiki/Power_over_Ethernet">PoE</a></strong> , es podria posar una de 4 ports en el escenari, per a felicitar el escalat posterior del projecte que no son massa cars, i un switch (este no PoE) en les oficines per centralitzar la xarxa. i tirar cable entre ells i les càmeres. reduint la distancia del PoE a les càmeres ip.</p></li>
+<li><p><a href="https://www.vadavo.com/blog/switch-poe-que-es-y-que-tipos-hay/"><strong>Switch</strong></a> <a href="https://ca.wikipedia.org/wiki/Power_over_Ethernet"><strong>PoE</strong></a> , es podria posar una de 4 ports en el escenari, per a felicitar el escalat posterior del projecte que no son massa cars, i un switch (este no PoE) en les oficines per centralitzar la xarxa. i tirar cable entre ells i les càmeres. reduint la distancia del PoE a les càmeres ip.</p></li>
 <li><p><strong>Conter</strong> en una plataforma de streaming.</p></li>
 <li><p><strong>Programa de streaming</strong> (OBS, Livestream Studio, Wirecast, vMix, mimoLive o Tricaster) alternatives gratuïtes.</p></li>
 <li><p>Un ordenador o portàtil que realitze les tasques de <strong>producció</strong>, podria ser un dels ordenadors de l’empresa que gasta per a disney, s’utilitzaria en el moment de fer la producció en viu. Per a fer streaming de una obra editada a posteriori, de les copies fetes en el servidor de disc, no faria falta.</p></li>
@@ -262,38 +259,46 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">1.4</span> Software<a href="streaming.html#software" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Programes de streaming, OBS, Livestream Studio, Wirecast, mimoLive.</p>
 <p>Es recomana per a començar OBS o Livestream, en cas de que el ordenador que farà de centre de producció siga un Mac, la opció sera OBS.</p>
-<div id="obs" class="section level3 hasAnchor" number="1.4.1">
-<h3><span class="header-section-number">1.4.1</span> OBS<a href="streaming.html#obs" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><a href="https://obsproject.com/">OBS</a></p>
-<p>Free and open source software for video recording and live streaming.
-Multiplataforma.</p>
-</div>
-<div id="livestream-studio" class="section level3 hasAnchor" number="1.4.2">
-<h3><span class="header-section-number">1.4.2</span> Livestream Studio<a href="streaming.html#livestream-studio" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><a href="https://streamlabs.com/">Livestream Studio</a></p>
-<p>Per a Windows</p>
-</div>
-<div id="wirecast" class="section level3 hasAnchor" number="1.4.3">
-<h3><span class="header-section-number">1.4.3</span> Wirecast<a href="streaming.html#wirecast" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><a href="https://www.telestream.net/">Wirecast</a></p>
-<p>De pagament.</p>
-</div>
-<div id="momolive" class="section level3 hasAnchor" number="1.4.4">
-<h3><span class="header-section-number">1.4.4</span> Momolive<a href="streaming.html#momolive" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><a href="https://mimolive.com/">MimoLive</a></p>
-<p>Pagament</p>
-</div>
+<table>
+<caption>Programes</caption>
+<colgroup>
+<col width="29%" />
+<col width="70%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left"><strong>Programes</strong></th>
+<th><strong>Desc</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="https://obsproject.com/">OBS</a></td>
+<td>Software gratis per a gravar video i streaming.</td>
+</tr>
+<tr class="even">
+<td align="left"><a href="https://streamlabs.com/">Livestream Studio</a></td>
+<td>Per a Windows</td>
+</tr>
+<tr class="odd">
+<td align="left"><a href="https://www.telestream.net/">Wirecast</a></td>
+<td>De pagament.</td>
+</tr>
+<tr class="even">
+<td align="left"><a href="https://mimolive.com/">MimoLive</a></td>
+<td>Pagament processional.</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="hardware-necessari" class="section level2 hasAnchor" number="1.5">
 <h2><span class="header-section-number">1.5</span> Hardware necessari<a href="streaming.html#hardware-necessari" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <div id="servidor" class="section level3 hasAnchor" number="1.5.1">
 <h3><span class="header-section-number">1.5.1</span> Servidor<a href="streaming.html#servidor" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>Es comenta que es pot reutilitzar l’ordenador que es te en venda de entrades,
-Es pot mirar a veure si compleix els requisits minims requerits. En principi, no crec que faça falta un massa potent per a lo que volem posar.</p>
+<p>Es comenta que es pot re utilitzar l’ordenador que es te en venda de entrades, Es pot mirar a veure si compleix els requisits minims requerits. En principi, no crec que faça falta un massa potent per a lo que volem posar.</p>
 <p>En el servidor s’implementaran serveis de DNS, Servidor de fulles web, (controlador de domini, no crec que siga necessari, pero es pot posar també, si volem controlar els recursos que tinga accés cada membre)</p>
 <p>Es podia discutir si interessa un sistema de comunicacions inter, per poder comunicar mitjançant so, video o xat entre el control i l’escenari. o volen passar informació en temps real als actors en el escenari des de control. hi ha varies opcions lliure, per exemple <a href="https://meet.jit.si/">Jitsi meet</a>, tindria que mirar-ho, ho he provar varie vegades, i no he pogut der-lo funcionar, es cosa d’insistir. Aço li donaria un poc mes de faena al servidor, pero com no serien molt interlocutors, no crec que requerisca massa potencia.</p>
-<p>Es podria posar també un sistema de <a href="https://nextcloud.com/">cloud</a> intern, que ja integra les videoconferències i moltes mes coses per al treball en equip, pero supose que amb un equip reduït, igual no val la pena, si soles es local, i la gent treballa des de casa la major part del temps. Es pot contractar un conter online, pero je s’està gastant el drive.
-Es pot fer una demo, i si interessa es deixa.</p>
+<p>Es podria posar també un sistema de <a href="https://nextcloud.com/">cloud</a> intern, que ja integra les videoconferències i moltes mes coses per al treball en equip, pero supose que amb un equip reduït, igual no val la pena, si soles es local, i la gent treballa des de casa la major part del temps. Es pot contractar un conter online, pero ja s’està gastant el drive. Es pot fer una demo, i si interessa es deixa.</p>
 <p>Sistema de correu intern, no li vec massa sentit, pero es pot posar.</p>
 <p>Al servidor de web, es pot instal.lar una copia de wordpress, per si es vol experimentar con es veuen les coses abans de publicar-les. Es pot configurar per a que cada usuari de la sala tinga el seu directori per penjar les seves fulles.</p>
 <p>Crec que seria interessant, per servir presentacions de les obres que es van a representar, si al final s’instal.la wifi en la sala, que tinguen una primera fulla al connectar, on es parle de l’obra que van a veure, de les pròximes que es representaran una fulla, o on es puga interactuar amb ells, passant qüestionaris, convidant-los a fer comentaris … ( aço es intern i soles es pot realitzar amb la gent que es connecte al wifi)</p>
@@ -305,8 +310,7 @@ Es pot fer una demo, i si interessa es deixa.</p>
 <p>Si es volen guardar les copies de les càmeres, i la idea es no fer un streaming pur, mes be editar a posteriori les imatges, o tindre una copia dels assajos per veure en que es pot millorar, es requeriria espai per fer aquestes copies. hi ha dues possibilitats.</p>
 <ul>
 <li><p><a href="https://en.wikipedia.org/wiki/Network-attached_storage">NAS</a>, sistema de disc en xarxa, La millor opció.</p></li>
-<li><p>Que la torre que gastem de servidor , faça de servidor de disc, on es pot implementar
-configurar RAID en diferents tipus de redundancies, segons el numero de discs durs que tinguem, i si ens interessa mes la velocitat o la redundància.</p></li>
+<li><p>Que la torre que gastem de servidor , faça de servidor de disc, on es pot implementar configurar RAID en diferents tipus de redundancies, segons el numero de discs durs que tinguem, i si ens interessa mes la velocitat o la redundància.</p></li>
 </ul>
 </div>
 <div id="càmeres-ip" class="section level3 hasAnchor" number="1.5.3">
@@ -355,7 +359,7 @@ configurar RAID en diferents tipus de redundancies, segons el numero de discs du
 gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
-"github": false,
+"github": true,
 "facebook": true,
 "twitter": true,
 "linkedin": false,
@@ -371,8 +375,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/incitato/prova/edit/main/01-streaming.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
@@ -388,7 +392,7 @@ gitbook.start({
 "options": null
 },
 "toc": {
-"collapse": "subsection"
+"collapse": "none"
 },
 "toolbar": {
 "position": "static"
