--- a/configurracio-del-servidor.html
+++ b/configurracio-del-servidor.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-15" />
+<meta name="date" content="2022-04-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -145,13 +145,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.1" data-path="streaming.html"><a href="streaming.html#materials"><i class="fa fa-check"></i><b>1.1</b> Materials<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-dinstillació"><i class="fa fa-check"></i><b>1.2</b> Projecte d’instil·lació<span></span></a></li>
 <li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#pressupost"><i class="fa fa-check"></i><b>1.3</b> Pressupost<span></span></a></li>
-<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a>
-<ul>
-<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.4.1</b> OBS<span></span></a></li>
-<li class="chapter" data-level="1.4.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.4.2</b> Livestream Studio<span></span></a></li>
-<li class="chapter" data-level="1.4.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.4.3</b> Wirecast<span></span></a></li>
-<li class="chapter" data-level="1.4.4" data-path="streaming.html"><a href="streaming.html#momolive"><i class="fa fa-check"></i><b>1.4.4</b> Momolive<span></span></a></li>
-</ul></li>
+<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a></li>
 <li class="chapter" data-level="1.5" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.5</b> Hardware necessari<span></span></a>
 <ul>
 <li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
@@ -216,7 +210,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
-<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> notes<span></span></a></li>
+<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
+<ul>
+<li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -237,11 +234,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="configurracio-del-servidor" class="section level1 hasAnchor" number="8">
 <h1><span class="header-section-number">Projecte 8</span> Configurracio del servidor<a href="configurracio-del-servidor.html#configurracio-del-servidor" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <ul>
-<li><p>Posible instalacio d’un NAS</p></li>
+<li><p>Possible instal·lació d’un NAS</p></li>
 <li><p>Fer les funcions de NAS en el mateix servidor, fer RAID, depenent del
-pressupost fer un de tipus 0 o 1 en redundancia.</p></li>
+pressupost fer un de tipus 0 o 1 en redundància.</p></li>
 <li><p>Configurar un DNS en el servidor.</p></li>
-<li><p>Configurar un DHCP, de moment ho descarte, si anara a mes el wifi en la sala, i es
+<li><p>Configurar un DHCP, de moment ho descartem, si anara a mes el wifi en la sala, i es
 vullga fer mes interaccions amb el public, seria per a estudiar,
 soles per al numero d’ordenador dels centre, amb IP fixes, va que el mates.</p></li>
 <li><p>Configurar un servidor web, per als serveis que es poden posar.</p>
@@ -272,7 +269,7 @@ soles per al numero d’ordenador dels centre, amb IP fixes, va que el mates.</p
 gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
-"github": false,
+"github": true,
 "facebook": true,
 "twitter": true,
 "linkedin": false,
@@ -288,8 +285,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/incitato/prova/edit/main/08-ConfiguracioDelServidor.rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
@@ -305,7 +302,7 @@ gitbook.start({
 "options": null
 },
 "toc": {
-"collapse": "subsection"
+"collapse": "none"
 },
 "toolbar": {
 "position": "static"
