--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-15" />
+<meta name="date" content="2022-04-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -54,70 +54,6 @@
 <script src="assets/anchor-sections-1.1.0/anchor-sections.js"></script>
 
 
-<style type="text/css">
-pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
-pre > code.sourceCode > span:empty { height: 1.2em; }
-.sourceCode { overflow: visible; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
-pre.sourceCode { margin: 0; }
-@media screen {
-div.sourceCode { overflow: auto; }
-}
-@media print {
-pre > code.sourceCode { white-space: pre-wrap; }
-pre > code.sourceCode > span { text-indent: -5em; padding-left: 5em; }
-}
-pre.numberSource code
-  { counter-reset: source-line 0; }
-pre.numberSource code > span
-  { position: relative; left: -4em; counter-increment: source-line; }
-pre.numberSource code > span > a:first-child::before
-  { content: counter(source-line);
-    position: relative; left: -1em; text-align: right; vertical-align: baseline;
-    border: none; display: inline-block;
-    -webkit-touch-callout: none; -webkit-user-select: none;
-    -khtml-user-select: none; -moz-user-select: none;
-    -ms-user-select: none; user-select: none;
-    padding: 0 4px; width: 4em;
-    color: #aaaaaa;
-  }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
-div.sourceCode
-  {   }
-@media screen {
-pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
-}
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-</style>
 
 
 <link rel="stylesheet" href="style.css" type="text/css" />
@@ -145,13 +81,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.1" data-path="streaming.html"><a href="streaming.html#materials"><i class="fa fa-check"></i><b>1.1</b> Materials<span></span></a></li>
 <li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-dinstillació"><i class="fa fa-check"></i><b>1.2</b> Projecte d’instil·lació<span></span></a></li>
 <li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#pressupost"><i class="fa fa-check"></i><b>1.3</b> Pressupost<span></span></a></li>
-<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a>
-<ul>
-<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.4.1</b> OBS<span></span></a></li>
-<li class="chapter" data-level="1.4.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.4.2</b> Livestream Studio<span></span></a></li>
-<li class="chapter" data-level="1.4.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.4.3</b> Wirecast<span></span></a></li>
-<li class="chapter" data-level="1.4.4" data-path="streaming.html"><a href="streaming.html#momolive"><i class="fa fa-check"></i><b>1.4.4</b> Momolive<span></span></a></li>
-</ul></li>
+<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a></li>
 <li class="chapter" data-level="1.5" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.5</b> Hardware necessari<span></span></a>
 <ul>
 <li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
@@ -216,7 +146,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
-<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> notes<span></span></a></li>
+<li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
+<ul>
+<li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
+</ul></li>
 </ul>
 
       </nav>
@@ -236,13 +169,17 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="header">
 <h1 class="title">Arts escèniques</h1>
+<h2 class="subtitle"><em><p>Projecte de pràctiques d’empresa del grau<br />
+F.P. ASISX<br />
+I.E. Maria Enriquez<br />
+<em>Gandia 2022</em></p></em></h2>
 <p class="author"><em>Ramiro Palau</em></p>
-<p class="date"><em>2022-04-15</em></p>
+<p class="date"><em>2022-04-16</em></p>
 </div>
 <div id="about" class="section level1 unnumbered hasAnchor">
 <h1>About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <!-- R global options: R chunk images display without code (no echo); show PDF image over JPG/PNG when available in PDF output-->
-<div class="infobox caution">
+<div class="rmdcuidao">
 <p><strong>Nota</strong>: El llibre encara esta en fase de construcció, disculpeu les faltes ortogràfiques i la incoherència del text</p>
 </div>
 <p>Documentació dels projectes proposats a realitzar en el desenvolupament de les practiques realitzades en <strong>Espacio Inestable</strong>.</p>
@@ -275,7 +212,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 gitbook.require(["gitbook"], function(gitbook) {
 gitbook.start({
 "sharing": {
-"github": false,
+"github": true,
 "facebook": true,
 "twitter": true,
 "linkedin": false,
@@ -291,8 +228,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": null,
-"text": null
+"link": "https://github.com/incitato/prova/edit/main/index.Rmd",
+"text": "Edit"
 },
 "history": {
 "link": null,
@@ -308,7 +245,7 @@ gitbook.start({
 "options": null
 },
 "toc": {
-"collapse": "subsection"
+"collapse": "none"
 },
 "toolbar": {
 "position": "static"
